feat: variable reuse set for multiview convolution layers

--- a/capstone/mlnd_capstone.ipynb
+++ b/capstone/mlnd_capstone.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -652,7 +654,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -672,7 +676,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -692,7 +698,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -784,7 +792,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -887,7 +897,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1067,7 +1079,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1096,7 +1110,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1141,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -1151,6 +1167,7 @@
     "    input_ = tf.placeholder(tf.float32,\n",
     "                             shape=[None, code_shape[1], code_shape[2], code_shape[3], code_shape[4]],\n",
     "                             name=\"inputs\")\n",
+    "    \n",
     "    target_ = tf.placeholder(tf.float32,\n",
     "                              shape=[None, target_shape[1]],\n",
     "                              name=\"target\")\n",
@@ -1164,7 +1181,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_: Tensor(\"inputs:0\", shape=(?, 16, 14, 14, 512), dtype=float32)\n",
+      "target_: Tensor(\"target:0\", shape=(?, 17), dtype=float32)\n",
+      "keep_prob_: Tensor(\"keep_prob:0\", dtype=float32)\n",
+      "is_training_: Tensor(\"is_training:0\", dtype=bool)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "veryify get_inputs\n",
+    "\"\"\"\n",
+    "tf.reset_default_graph()\n",
+    "code_shape = (917, 16, 14, 14, 512)\n",
+    "target_shape = (917, 17)\n",
+    "#just for local machine without data\n",
+    "input_, target_, keep_prob_, is_training_ = get_inputs(code_shape, target_shape)\n",
+    "\n",
+    "print(\"input_:\",input_)\n",
+    "print(\"target_:\",target_)\n",
+    "print(\"keep_prob_:\",keep_prob_)\n",
+    "print(\"is_training_:\",is_training_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -1207,7 +1258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -1216,7 +1276,6 @@
     "def multiview_layers(views, keep_prob=0.5, is_training=True):\n",
     "    \"\"\"\n",
     "    views are inputs, with dimensions: batch x angles x width x height x channels\n",
-    "    \n",
     "    \n",
     "    \"\"\"\n",
     "    n_views = views.get_shape().as_list()[1]  #16 views (angles)\n",
@@ -1227,38 +1286,128 @@
     "    view_features = []\n",
     "\n",
     "    for i in xrange(n_views):\n",
-    "    #for i in range(0,n_views,4): #use only angles 0, 4, 8, 12\n",
     "        reuse = (i != 0) #reuse is False for the 0th angle, and true for all remaining angles\n",
+    "        \n",
     "        view = tf.gather(views, i) # NxWxHxC\n",
     "        #view has height, width, channel of 14, 14, 512\n",
-    "        with tf.variable_scope(name_or_scope='conv6', reuse=reuse) as scope:        \n",
-    "            conv6 = tf.layers.conv2d(view, filters=512, kernel_size=3, strides=2, padding='same',name='conv6')\n",
+    "        with tf.variable_scope(name_or_scope='multiview', reuse=reuse) as scope:\n",
+    "            #print(\"view i: \", i)\n",
+    "            conv6 = tf.layers.conv2d(view, filters=512, kernel_size=3, strides=2, padding='same',reuse=reuse,name='conv6')\n",
+    "            #print(\"conv6: \",conv6)\n",
     "            #conv6 has h,w,c of 7,7,512\n",
-    "            bn6 = tf.layers.batch_normalization(conv6, training=is_training, name='bn6')\n",
+    "            bn6 = tf.layers.batch_normalization(conv6, training=is_training,reuse=reuse,name='bn6')\n",
     "            relu6 = leaky_relu(bn6, name='relu6')\n",
     "            drop6 = tf.nn.dropout(relu6, keep_prob=keep_prob, name='drop6')\n",
-    "        #7 x 7 x 512\n",
-    "        with tf.variable_scope(name_or_scope='conv7', reuse=reuse) as scope:\n",
-    "            conv7 = tf.layers.conv2d(drop6, filters=512, kernel_size=3, strides=1, padding='valid', name='conv7')\n",
+    "            #7 x 7 x 512\n",
+    "\n",
+    "            conv7 = tf.layers.conv2d(drop6, filters=512, kernel_size=3, strides=1, padding='valid',reuse=reuse,name='conv7')\n",
+    "            #print(\"conv7: \",conv7)\n",
     "            # (7 - 3 + 1) /1 = 5; so it's now 5 x 5 x 512\n",
-    "            bn7 = tf.layers.batch_normalization(conv7, training=is_training, name='bn7')\n",
+    "            bn7 = tf.layers.batch_normalization(conv7, training=is_training,reuse=reuse,name='bn7')\n",
     "            relu7 = leaky_relu(bn7, name='relu7')\n",
     "            drop7 = tf.nn.dropout(relu7, keep_prob=keep_prob, name='drop7')\n",
     "            \n",
-    "        #shape is now 5 x 5 x 512\n",
-    "        '''\n",
-    "        flatten last conv layer into 2D: batch x (width*height*channels)\n",
-    "        '''\n",
-    "        dim = np.prod(drop7.get_shape().as_list()[1:])\n",
-    "        reshape = tf.reshape(relu7, [-1, dim])\n",
-    "        view_features.append(reshape)\n",
+    "            #shape is now 5 x 5 x 512\n",
+    "            '''\n",
+    "            flatten last conv layer into 2D: batch x (width*height*channels)\n",
+    "            '''\n",
+    "            dim = np.prod(drop7.get_shape().as_list()[1:])\n",
+    "            reshape = tf.reshape(relu7, [-1, dim])\n",
+    "            #print(\"reshape: \",reshape)\n",
+    "            view_features.append(reshape)\n",
     "        \n",
     "    return view_features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "view i:  0\n",
+      "conv6:  Tensor(\"multiview/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  1\n",
+      "conv6:  Tensor(\"multiview_1/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_1/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_1/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  2\n",
+      "conv6:  Tensor(\"multiview_2/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_2/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_2/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  3\n",
+      "conv6:  Tensor(\"multiview_3/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_3/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_3/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  4\n",
+      "conv6:  Tensor(\"multiview_4/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_4/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_4/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  5\n",
+      "conv6:  Tensor(\"multiview_5/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_5/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_5/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  6\n",
+      "conv6:  Tensor(\"multiview_6/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_6/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_6/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  7\n",
+      "conv6:  Tensor(\"multiview_7/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_7/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_7/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  8\n",
+      "conv6:  Tensor(\"multiview_8/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_8/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_8/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  9\n",
+      "conv6:  Tensor(\"multiview_9/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_9/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_9/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  10\n",
+      "conv6:  Tensor(\"multiview_10/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_10/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_10/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  11\n",
+      "conv6:  Tensor(\"multiview_11/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_11/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_11/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  12\n",
+      "conv6:  Tensor(\"multiview_12/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_12/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_12/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  13\n",
+      "conv6:  Tensor(\"multiview_13/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_13/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_13/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  14\n",
+      "conv6:  Tensor(\"multiview_14/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_14/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_14/Reshape:0\", shape=(?, 12800), dtype=float32)\n",
+      "view i:  15\n",
+      "conv6:  Tensor(\"multiview_15/conv6/BiasAdd:0\", shape=(?, 7, 7, 512), dtype=float32)\n",
+      "conv7:  Tensor(\"multiview_15/conv7/BiasAdd:0\", shape=(?, 5, 5, 512), dtype=float32)\n",
+      "reshape:  Tensor(\"multiview_15/Reshape:0\", shape=(?, 12800), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "very multiview_layers\n",
+    "\"\"\"\n",
+    "\n",
+    "view_features_layer = multiview_layers(views=input_, keep_prob=0.5, is_training=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -1284,14 +1433,58 @@
     "    for view in view_features_layer[1:]:\n",
     "        view = tf.expand_dims(view, 0)\n",
     "        view_pool_layer = tf.concat([view_pool_layer, view], 0)\n",
-    "    print('view_pool_layer before reducing:', view_pool_layer.get_shape().as_list())\n",
+    "    #print('view_pool_layer before reducing:', view_pool_layer.get_shape().as_list())\n",
     "    view_pool_layer = tf.reduce_max(view_pool_layer, [0], name=name)\n",
     "    return view_pool_layer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "view_pool_layer before reducing: [16, None, 12800]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Verify \n",
+    "\"\"\"\n",
+    "view_pool_layer = view_pool(view_features_layer, name='view_pool8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'view_pool8:0' shape=(?, 12800) dtype=float32>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view_pool_layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -1320,7 +1513,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "very dense layer\n",
+    "\"\"\"\n",
+    "out = dense(view_pool_layer, keep_prob=0.5, is_training=True, n_target=17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'output:0' shape=(?, 17) dtype=float32>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -1337,7 +1566,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "loss = get_loss(output, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1353,14 +1593,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "view_pool_layer before reducing: [4, None, 12800]\n"
+      "view_pool_layer before reducing: [16, None, 12800]\n"
      ]
     }
    ],
@@ -1374,8 +1616,10 @@
     "tf.reset_default_graph()\n",
     "\n",
     "#inputs\n",
-    "\n",
-    "input_, target_, keep_prob_, is_training_ = get_inputs(code.shape, target.shape)\n",
+    "code_shape = (1147, 16, 14, 14, 512)\n",
+    "target_shape = (1147, 17)\n",
+    "#input_, target_, keep_prob_, is_training_ = get_inputs(code.shape, target.shape)\n",
+    "input_, target_, keep_prob_, is_training_ = get_inputs(code_shape, target_shape) #for local machine without data\n",
     "\n",
     "view_features_layer = multiview_layers(views=input_, keep_prob=keep_prob_, is_training=is_training_)\n",
     "\n",
@@ -1537,9 +1781,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:py2]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-py2-py"
   },
   "language_info": {
    "codemirror_mode": {
